Version 2.5.4, August 1, 2018

Closed issues:

2030, 2048, 2052, 2059, 2065, 2067, 2073, 2082.

---------------------------------------------------------------------------
Version 2.5.3, July 2, 2018

Closed issues:

266, 1248, 1678, 2010, 2011, 2018, 2020, 2046, 2047, 2054.

---------------------------------------------------------------------------
Version 2.5.2, June 1, 2018

In the Map Key Checker, null is now @UnknownKeyFor.  See the "Map Key Checker"
chapter in the manual for more details.

Closed issues:

370, 469, 1701, 1916, 1922, 1959, 1976, 1978, 1981, 1983, 1984, 1991, 1992.

---------------------------------------------------------------------------
Version 2.5.1, May 1, 2018

Added a Maven artifact of the Checker Framework testing library, testlib.

Closed issues:

849, 1739, 1838, 1847, 1890, 1901, 1911, 1912, 1913, 1934, 1936, 1941, 1942,
1945, 1946, 1948, 1949, 1952, 1953, 1956, 1958.

---------------------------------------------------------------------------

Version 2.5.0, April 2, 2018

Declaration annotations that are aliases for type annotations are now treated
as if they apply to the top-level type.  See "Declaration annotations" section
in the "Warnings" chapter in the manual for more details.

Ended support for annotations in comments.  See "Migrating away from
annotations in comments" section in the "Handling legacy code" chapter in the
manual for instructions on how to remove annotations from comments.

Closed issues:

515, 1667, 1739, 1776, 1819, 1863, 1864, 1865, 1866, 1867, 1870, 1876, 1879,
1882, 1898, 1903, 1905, 1906, 1910, 1914, 1915, 1920.

---------------------------------------------------------------------------

Version 2.4.0, March 1, 2018

Added the Index Checker, which eliminates ArrayIndexOutOfBoundsException.

Added the Optional Checker, which verifies uses of Java 8's Optional class.

Removed the Linear Checker, whose implementation was inconsistent with its
documentation.
