@@ -1,3 +1,6 @@
+Renamed the testlib Maven artifact to framework-test.
+
+---------------------------------------------------------------------------
 Version 2.5.4, August 1, 2018
 
 Closed issues:
